--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "dev": "nodemon src/index.js",
+    "start": "node src/index.js",
     "build": "echo 'No build step required'"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "mongoose": "^8.7.2",
     "nocache": "^4.0.0",
     "nodemailer": "^6.9.15",
+    "nodemon": "^3.1.7",
     "npm": "^10.9.0",
     "otp-generator": "^4.0.1",
     "session": "^0.1.0",
