--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "express-session": "^1.18.1",
     "install": "^0.13.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^8.7.2",
     "nocache": "^4.0.0",
+    "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.7",
     "npm": "^10.9.0",
