--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.1",
     "express-session": "^1.18.1",
     "install": "^0.13.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.7.2",
     "nocache": "^4.0.0",
