--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nodemon": "^3.1.7",
     "npm": "^10.9.0",
     "otp-generator": "^4.0.1",
+    "razorpay": "^2.9.5",
     "session": "^0.1.0",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
