--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.46",
     "mongoose": "^8.7.2",
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
