--- a/package.json
+++ b/package.json
@@ -30,12 +30,14 @@
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
-    "nodemon": "^3.1.7",
     "npm": "^10.9.0",
     "otp-generator": "^4.0.1",
     "razorpay": "^2.9.5",
     "session": "^0.1.0",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
