--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "install": "^0.13.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "mime-type": "^5.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.7.2",
+    "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.15",
     "npm": "^10.9.0",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "razorpay": "^2.9.5",
     "session": "^0.1.0",
     "socket.io": "^4.8.1",
