--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "nodemon src/index.js",
-    "build": "echo 'No build step required'"
+    "build": "echo 'No build step required'",
+    "cron-test": "nodemon src/crons/testCron.js"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +22,7 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-list-routes": "^1.2.4",
     "express-session": "^1.18.1",
     "install": "^0.13.0",
     "joi": "^17.13.3",
