--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "dev": "nodemon src/index.js",
     "start": "nodemon src/index.js",
-    "build": "echo 'No build step required'"
+    "build": "echo 'No build step required'",
+    "cron-test": "nodemon src/crons/testCron.js"
   },
   "keywords": [],
   "author": "",
@@ -21,13 +22,16 @@
     "crypto-js": "^4.2.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "express-list-routes": "^1.2.4",
     "express-session": "^1.18.1",
     "install": "^0.13.0",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "logger": "^0.0.1",
     "mime-type": "^5.0.0",
     "moment": "^2.30.1",
     "mongoose": "^8.7.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
@@ -38,7 +42,8 @@
     "razorpay": "^2.9.5",
     "session": "^0.1.0",
     "socket.io": "^4.8.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
