--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "nodemon src/index.js",
     "start": "nodemon src/index.js",
     "build": "echo 'No build step required'",
+    "test" : "jest",
     "cron-test": "nodemon src/crons/testCron.js"
   },
   "keywords": [],
@@ -35,7 +36,7 @@
     "multer": "^1.4.5-lts.1",
     "nocache": "^4.0.0",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.9.15",
+    "nodemailer": "^6.9.16",
     "npm": "^10.9.0",
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
@@ -46,6 +47,8 @@
     "winston": "^3.17.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.20"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.20",
+    "supertest": "^7.0.0"
   }
 }
