--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon src/index.js",
     "start": "nodemon src/index.js",
     "build": "echo 'No build step required'",
-    "test" : "jest",
+    "test": "jest",
     "cron-test": "nodemon src/crons/testCron.js"
   },
   "keywords": [],
@@ -42,6 +42,7 @@
     "path": "^0.12.7",
     "razorpay": "^2.9.5",
     "session": "^0.1.0",
+    "shortid": "^2.2.17",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0",
     "winston": "^3.17.0"
