--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "logger": "^0.0.1",
     "mime-type": "^5.0.0",
     "moment": "^2.30.1",
+    "moment-timezone": "^0.5.47",
     "mongoose": "^8.7.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
