--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "start": "nodemon src/index.js",
     "build": "echo 'No build step required'",
     "test": "jest",
     "cron-test": "nodemon src/crons/testCron.js"
