--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,29 +18,18 @@ jobs:
       with:
         ssh-private-key: ${{ secrets.KC_DEVELOPMENT_SSH_PRIVATE_KEY }}
 
-    - name: Deploy to EC2
+    - name: Deploy to EC2 (Development)
       run: |
-        # Add EC2 IP to known_hosts
-        ssh-keyscan 15.206.211.84 >> ~/.ssh/known_hosts
+        ssh-keyscan 3.7.254.117 >> ~/.ssh/known_hosts
         chmod 644 ~/.ssh/known_hosts
 
-        # SSH into EC2 and execute deployment commands
-        ssh -o StrictHostKeyChecking=no ec2-user@15.206.211.84 << 'EOF'
-          echo "Switching to project directory..."
+        ssh -o StrictHostKeyChecking=no ec2-user@3.7.254.117 << 'EOF'
           cd ~/Diskuss || git clone -b Development https://github.com/YOUR_REPO.git ~/Diskuss && cd ~/Diskuss
-
-          echo "Checking out Development branch..."
           git checkout Development
           git pull origin Development
 
-          echo "Installing dependencies..."
           npm install --production
-
-          echo "Restarting application..."
           pm2 reload all || pm2 start server.js
 
           echo "Deployment to Development server completed!"
         EOF
-
-    - name: Complete Deployment
-      run: echo "Development Deployment successful!"
