--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,35 +1,44 @@
-name: Deploy to Development Server
+name: Deploy to EC2
 
 on:
   push:
     branches:
-      - Development  # Runs on Development branch push
+      - main  # You can change this to the branch you use for deployment
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout Code
+    # Checkout the code
+    - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up SSH Agent
+    # Set up SSH Agent and add the SSH private key from GitHub Secrets
+    - name: Set up SSH agent
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.KC_DEVELOPMENT_SSH_PRIVATE_KEY }}
+        ssh-private-key: ${{ secrets.DISKUSS_SSH_PRIVATE_KEY }}
 
-    - name: Deploy to EC2 (Development)
+    # Deploy to EC2 instance
+    - name: Deploy to EC2
       run: |
-        ssh-keyscan 3.7.254.117 >> ~/.ssh/known_hosts
-        chmod 644 ~/.ssh/known_hosts
-
-        ssh -o StrictHostKeyChecking=no ec2-user@3.7.254.117 << 'EOF'
-          cd ~/Diskuss || git clone -b Development https://github.com/YOUR_REPO.git ~/Diskuss && cd ~/Diskuss
-          git checkout Development
-          git pull origin Development
-
-          npm install --production
-          pm2 reload all || pm2 start server.js
-
-          echo "Deployment to Development server completed!"
+        # Ensure known_hosts is set up (to avoid interactive prompts)
+        mkdir -p ~/.ssh
+        ssh-keyscan -H 13.203.24.247 >> ~/.ssh/known_hosts
+        chmod 600 ~/.ssh/known_hosts
+        
+        # Run the deploy commands on your EC2 instance
+        ssh -o StrictHostKeyChecking=no ubuntu@13.203.24.247 << 'EOF'
+          cd ~/Know Connections
+          git pull origin main  # Pull latest code from GitHub
+          npm install  # Install dependencies
+          # Restart the application or any service you need here (e.g., pm2 restart, etc.)
+          pm2 restart all  # Example if you use pm2 to manage your application
         EOF
+
+    # Complete the job
+    - name: Complete job
+      run: echo "Deployment successful!"
+
+
